--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,10 @@
 // Variables
-@import 'variables';
+@use 'variables';
 
 // Bootstrap
-@import '~admin-lte/build/scss/adminlte';
+@use '~admin-lte/build/scss/adminlte';
+
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
+@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.css";
+//@import '~datatables.net-select-bs4/css/select.dataTables.css';
+//@import '~datatables.net-searchpanes-dt/css/searchPanes.dataTables.css';
